# project

./: .dockerignore  Dockerfile  crud.py  database.py  fantasy_data.db  fantasy_football.db  main.py  mm.py  models.py  requirements.txt  test_crud.py  test_main.py
sdk/: ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md  SDK_SUMMARY.md  example.py  pyproject.toml  pytest.ini  test_swcpy.py
src/swcpy/: __init__.py  swc_client.py  swc_config.py
src/swcpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/swcpy/schemas/: schemas.py
trail/: asyncs.py  constrained_fields.py
