[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swcpy"
version = "0.0.1"
authors = [
    {name = "Ahmed El Kassrawy"},
]
description = "Python SDK for the SWC Fantasy Sports API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [ 
    'pytest>=8.1',
    'httpx>=0.27.0',
    'pydantic>=2.0',
    'backoff>=2.2.1',
    'python-dotenv>=1.0.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=8.1',
    'pytest-cov>=4.1.0',
]

[tool.setuptools.packages.find]
where = ["../src"]
include = ["swcpy*"]